# GeoPackageCpp

./: CMakeLists.txt  LICENSE  README.md  conanfile.txt
app/: CMakeLists.txt
app/include/: CreateCommand.hpp  DeleteSpatialRefCommand.hpp  RandomFeaturesCommand.hpp
app/include/content/: CreateContentCommand.hpp  DeleteContentCommand.hpp  GetContentCommand.hpp  ListContentCommand.hpp
app/include/extension/: CreateExtensionCommand.hpp  DeleteExtensionCommand.hpp  GetExtensionCommand.hpp  ListExtensionCommand.hpp
app/include/feature/: AddFeatureCommand.hpp  CountFeaturesCommand.hpp  CreateFeatureLayerCommand.hpp  DeleteAllFeatureCommand.hpp  DeleteFeatureCommand.hpp  GetFeatureCommand.hpp  InfoFeatureCommand.hpp  ListFeatureCommand.hpp  ListFeatureLayersCommand.hpp  RandomFeaturesCommand.hpp  UpdateFeatureCommand.hpp
app/include/geometryColumn/: CreateGeometryColumnCommand.hpp  DeleteGeometryColumnCommand.hpp  GetGeometryColumnCommand.hpp  ListGeometryColumnCommand.hpp
app/include/index/: CreateIndexCommand.hpp  DeleteIndexCommand.hpp
app/include/layerStyle/: CreateLayerStyleCommand.hpp  DeleteLayerStyleCommand.hpp  ExportLayerStyleCommand.hpp  GetLayerStyleCommand.hpp  ListLayerStyleCommand.hpp  LoadLayerStyleCommand.hpp
app/include/spatialref/: CreateSpatialRefCommand.hpp  GetSpatialRefCommand.hpp  ListSpatialRefCommand.hpp
app/include/tile/: CreateGeodeticTileLayerCommand.hpp  CreateMercatorTileLayerCommand.hpp  CreateTileTableCommand.hpp  DeleteTileCommand.hpp  ExportTilesCommand.hpp  GetTileCommand.hpp  ImportTilesCommand.hpp  InfoTileCommand.hpp  ListTilesCommand.hpp  SetTileCommand.hpp
app/include/tileMatrix/: CreateTileMatrixCommand.hpp  DeleteTileMatrixCommand.hpp  GetTileMatrixCommand.hpp  ListTileMatrixCommand.hpp
app/include/tileMatrixSet/: CreateTileMatrixSetCommand.hpp  DeleteTileMatrixSetCommand.hpp  GetTileMatrixSetCommand.hpp  ListTileMatrixSetCommand.hpp
app/src/: App.cpp  CreateCommand.cpp  CreateSpatialRefCommand.cpp  DeleteSpatialRefCommand.cpp  GetSpatialRefCommand.cpp  ListSpatialRefCommand.cpp  RandomFeaturesCommand.cpp
app/src/content/: CreateContentCommand.cpp  DeleteContentCommand.cpp  GetContentCommand.cpp  ListContentCommand.cpp
app/src/extension/: CreateExtensionCommand.cpp  DeleteExtensionCommand.cpp  GetExtensionCommand.cpp  ListExtensionCommand.cpp
app/src/feature/: AddFeatureCommand.cpp  CountFeaturesCommand.cpp  CreateFeatureLayerCommand.cpp  DeleteAllFeatureCommand.cpp  DeleteFeatureCommand.cpp  GetFeatureCommand.cpp  InfoFeatureCommand.cpp  ListFeatureCommand.cpp  ListFeatureLayersCommand.cpp  RandomFeaturesCommand.cpp  UpdateFeatureCommand.cpp
app/src/geometryColumn/: CreateGeometryColumnCommand.cpp  DeleteGeometryColumnCommand.cpp  GetGeometryColumnCommand.cpp  ListGeometryColumnCommand.cpp
app/src/index/: CreateIndexCommand.cpp  DeleteIndexCommand.cpp
app/src/layerStyle/: CreateLayerStyleCommand.cpp  DeleteLayerStyleCommand.cpp  ExportLayerStyleCommand.cpp  GetLayerStyleCommand.cpp  ListLayerStyleCommand.cpp  LoadLayerStyleCommand.cpp
app/src/spatialref/: CreateSpatialRefCommand.cpp  DeleteSpatialRefCommand.cpp  GetSpatialRefCommand.cpp  ListSpatialRefCommand.cpp
app/src/tile/: CreateGeodeticTileLayerCommand.cpp  CreateMercatorTileLayerCommand.cpp  CreateTileTableCommand.cpp  DeleteTileCommand.cpp  ExportTilesCommand.cpp  GetTileCommand.cpp  ImportTilesCommand.cpp  InfoTileCommand.cpp  ListTilesCommand.cpp  SetTileCommand.cpp
app/src/tileMatrix/: CreateTileMatrixCommand.cpp  DeleteTileMatrixCommand.cpp  GetTileMatrixCommand.cpp  ListTileMatrixCommand.cpp
app/src/tileMatrixSet/: CreateTileMatrixSetCommand.cpp  DeleteTileMatrixSetCommand.cpp  GetTileMatrixSetCommand.cpp  ListTileMatrixSetCommand.cpp
app/test/: CMakeLists.txt  CreateCommandTest.cpp  CreateSpatialRefCommandTest.cpp  DeleteSpatialRefCommandTest.cpp  GetSpatialRefCommandTest.cpp  ListCommandTest.cpp  ListSpatialRefCommandTest.cpp  RandomFeaturesCommandTest.cpp
app/test/content/: CreateContentCommandTest.cpp  DeleteContentCommandTest.cpp  GetContentCommandTest.cpp  ListContentCommandTest.cpp
app/test/extension/: CreateExtensionCommandTest.cpp  DeleteExtensionCommandTest.cpp  GetExtensionCommandTest.cpp  ListExtensionCommandTest.cpp
app/test/tile/: GetTileCommandTest.cpp  (+9 more)
lib/: CMakeLists.txt
lib/include/: BinaryType.hpp  Bounds.hpp  Bytes.hpp  Content.hpp  DataType.hpp  Dimension.hpp  Endian.hpp  EnvelopeType.hpp  Extension.hpp  Feature.hpp  Field.hpp  FieldType.hpp  Flag.hpp  GeoPackage.hpp  GeoPackageGeometryReader.hpp  GeoPackageGeometryWriter.hpp  Geometry.hpp  GeometryCollection.hpp  GeometryColumn.hpp  GeometryField.hpp  GeometryType.hpp  LayerStyle.hpp  LineString.hpp  LinearRing.hpp  MultiLineString.hpp  MultiPoint.hpp  MultiPolygon.hpp  Point.hpp  Polygon.hpp  Schema.hpp  Scope.hpp  Size.hpp  SpatialRef.hpp  Tile.hpp  TileMatrix.hpp  TileMatrixSet.hpp  WKBReader.hpp  WKBWriter.hpp  WKTReader.hpp  WKTWriter.hpp
lib/src/: BinaryType.cpp  Bounds.cpp  Bytes.cpp  Content.cpp  DataType.cpp  Dimension.cpp  EnvelopeType.cpp  Extension.cpp  Feature.cpp  Field.cpp  FieldType.cpp  Flag.cpp  GeoPackage.cpp  GeoPackageGeometryReader.cpp  GeoPackageGeometryWriter.cpp  Geometry.cpp  GeometryCollection.cpp  GeometryColumn.cpp  GeometryField.cpp  GeometryType.cpp  LayerStyle.cpp  LineString.cpp  LinearRing.cpp  MultiLineString.cpp  MultiPoint.cpp  MultiPolygon.cpp  Point.cpp  Polygon.cpp  Schema.cpp  Scope.cpp  Size.cpp  SpatialRef.cpp  Tile.cpp  TileMatrix.cpp  TileMatrixSet.cpp  WKBReader.cpp  WKBWriter.cpp  WKTReader.cpp  WKTWriter.cpp
lib/test/: BinaryTypeTest.cpp  BoundsTest.cpp  BytesTest.cpp  CMakeLists.txt  DimensionTest.cpp  FeatureTest.cpp  FieldTest.cpp  FieldTypeTest.cpp  GeoPackageGeometryReaderTest.cpp  GeoPackageGeometryWriterTest.cpp  GeoPackageTest.cpp  GeometryCollectionTest.cpp  LineStringTest.cpp  LinearRingTest.cpp  MultiLineStringTest.cpp  MultiPointTest.cpp  MultiPolygonTest.cpp  PointTest.cpp  PolygonTest.cpp  SchemaTest.cpp  SizeTest.cpp  WKBReaderTest.cpp  WKBWriterTest.cpp  WKTReaderTest.cpp  WKTWriterTest.cpp
(+36 files in other folders)
